--- a/package.json
+++ b/package.json
@@ -43,9 +43,12 @@
         "gulp-extract-sourcemap": "^0.1.1",
         "gulp-filter": "^1.0.1",
         "gulp-uglifyjs": "^0.5.0",
-        "handlebars": "^2.0.0-beta.1",
+        "handlebars": "^3.0.0",
         "hbsfy": "^2.1.0",
         "vinyl-buffer": "0.0.0",
-        "vinyl-source-stream": "^0.1.1"
+        "vinyl-source-stream": "^0.1.1",
+
+        "backbone": "^1.1.2",
+        "jquery": "^2.1.3"
     }
 }
