--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
         "vinyl-buffer": "0.0.0",
         "vinyl-source-stream": "^0.1.1",
 
+        "express": "4.11.2",
+        "body-parser": "~1.12.0",
+
         "backbone": "^1.1.2",
         "jquery": "^2.1.3"
     }
