--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
 
         "gulp": "^3.8.11",
         "gulp-plumber": "^0.6.6",
+        "gulp-sourcemaps": "^1.5.0",
+        "gulp-uglify": "^1.1.0",
         "through2": "^0.6.3",
         "jshint-stylish": "^1.0.1",
         "gulp-wrap": "^0.11.0",
@@ -42,7 +44,6 @@
         "browserify": "^9.0.3",
         "gulp-extract-sourcemap": "^0.1.1",
         "gulp-filter": "^2.0.2",
-        "gulp-uglifyjs": "^0.6.0",
         "handlebars": "^3.0.0",
         "hbsfy": "^2.2.1",
         "vinyl-buffer": "^1.0.0",
@@ -50,6 +51,8 @@
 
         "express": "4.11.2",
         "body-parser": "~1.12.0",
+
+        "resolve": "^1.1.6",
 
         "backbone": "^1.1.2",
         "jquery": "^2.1.3"
