--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
         "url": "ssh://git@github.com:antwan1986/avengers-web-application.git"
     },
     "authors": [
-        "Anthony Hastings <anthony@rehabstudio.com>",
-        "Neil McCallion <neil@rehabstudio.com>"
+        "Anthony Hastings <anthony@rehabstudio.com>"
     ],
+    "dependencies": {
+        "backbone": "^1.1.2",
+        "jquery": "^2.1.3"
+    },
     "devDependencies": {
         "yargs": "^3.3.1",
         "es6-promise": "^2.0.1",
@@ -51,10 +54,7 @@
 
         "express": "4.11.2",
         "body-parser": "~1.12.0",
-
-        "resolve": "^1.1.6",
-
-        "backbone": "^1.1.2",
-        "jquery": "^2.1.3"
+        "jade": "~1.9.2",
+        "resolve": "^1.1.6"
     }
 }
