--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     ],
     "dependencies": {
         "backbone": "^1.1.2",
-        "jquery": "^2.1.3"
+        "jquery": "^2.1.3",
+        "jed": "^1.1.0"
     },
     "devDependencies": {
         "yargs": "^3.3.1",
@@ -55,6 +56,9 @@
         "express": "4.11.2",
         "body-parser": "~1.12.0",
         "jade": "~1.9.2",
-        "resolve": "^1.1.6"
+        "resolve": "^1.1.6",
+
+        "jspot": "^0.3.7",
+        "gulp-po2json": "^0.4.0"
     }
 }
