--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "jed": "^1.1.0"
     },
     "devDependencies": {
+        "chalk": "^1.0.0",
         "yargs": "^3.3.1",
         "es6-promise": "^2.0.1",
         "underscore": "^1.8.2",
@@ -40,7 +41,7 @@
         "jshint-stylish": "^1.0.1",
         "gulp-wrap": "^0.11.0",
         "gulp-jshint": "^1.9.2",
-        "gulp-ruby-sass": "^0.7.1",
+        "gulp-sass": "^1.3.3",
         "gulp-autoprefixer": "2.1.0",
         "gulp-imagemin": "^2.2.1",
         "gulp-handlebars": "^3.0.1",
