--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "authors": [
         "Anthony Hastings <anthony@rehabstudio.com>"
     ],
+    "scripts": {
+        "test": "mocha server/server.spec.js && gulp test"
+    },
     "dependencies": {
         "backbone": "^1.1.2",
         "jquery": "^2.1.3",
@@ -24,6 +27,7 @@
         "chai": "^2.1.0",
         "mocha": "^2.1.0",
         "sinon": "^1.12.2",
+        "superagent": "^1.5.0",
         "karma": "^0.12.31",
         "karma-chai": "^0.1.0",
         "karma-mocha": "^0.1.10",
