--- a/package.json
+++ b/package.json
@@ -15,55 +15,52 @@
         "test": "mocha server/server.spec.js && gulp test"
     },
     "dependencies": {
-        "backbone": "^1.1.2",
-        "jquery": "^2.1.3",
-        "jed": "^1.1.0"
+        "backbone": "1.1.2",
+        "jquery": "2.1.3",
+        "jed": "1.1.0"
     },
     "devDependencies": {
-        "chalk": "^1.0.0",
-        "yargs": "^3.3.1",
-        "es6-promise": "^2.0.1",
-        "underscore": "^1.8.2",
-        "chai": "^2.1.0",
-        "mocha": "^2.1.0",
-        "sinon": "^1.12.2",
-        "superagent": "^1.5.0",
-        "karma": "^0.12.31",
-        "karma-chai": "^0.1.0",
-        "karma-mocha": "^0.1.10",
-        "karma-sinon": "^1.0.4",
-        "karma-phantomjs-launcher": "^0.1.4",
-        "karma-junit-reporter": "^0.2.2",
-        "karma-requirejs": "^0.2.2",
-        "karma-browserify": "^3.0.3",
-
-        "gulp": "^3.8.11",
-        "gulp-plumber": "^0.6.6",
-        "gulp-sourcemaps": "^1.5.0",
-        "gulp-uglify": "^1.1.0",
-        "through2": "^0.6.3",
-        "jshint-stylish": "^1.0.1",
-        "gulp-wrap": "^0.11.0",
-        "gulp-jshint": "^1.9.2",
-        "gulp-sass": "^1.3.3",
+        "chalk": "1.0.0",
+        "yargs": "3.3.1",
+        "es6-promise": "2.0.1",
+        "underscore": "1.8.2",
+        "chai": "2.1.0",
+        "mocha": "2.1.0",
+        "sinon": "1.12.2",
+        "superagent": "1.5.0",
+        "karma": "0.12.31",
+        "karma-chai": "0.1.0",
+        "karma-mocha": "0.1.10",
+        "karma-sinon": "1.0.4",
+        "karma-phantomjs-launcher": "0.1.4",
+        "karma-junit-reporter": "0.2.2",
+        "karma-requirejs": "0.2.2",
+        "karma-browserify": "3.0.3",
+        "gulp": "3.8.11",
+        "gulp-plumber": "0.6.6",
+        "gulp-sourcemaps": "1.5.0",
+        "gulp-uglify": "1.1.0",
+        "through2": "0.6.3",
+        "jshint-stylish": "1.0.1",
+        "gulp-wrap": "0.11.0",
+        "gulp-jshint": "1.9.2",
+        "gulp-sass": "2.0.3",
         "gulp-autoprefixer": "2.1.0",
-        "gulp-imagemin": "^2.2.1",
-        "gulp-handlebars": "^3.0.1",
-        "requirejs": "^2.1.16",
-        "browserify": "^9.0.3",
-        "gulp-extract-sourcemap": "^0.1.1",
-        "gulp-filter": "^2.0.2",
-        "handlebars": "^3.0.0",
-        "hbsfy": "^2.2.1",
-        "vinyl-buffer": "^1.0.0",
-        "vinyl-source-stream": "^1.0.0",
-
+        "gulp-imagemin": "2.2.1",
+        "gulp-handlebars": "3.0.1",
+        "requirejs": "2.1.16",
+        "browserify": "9.0.3",
+        "gulp-extract-sourcemap": "0.1.1",
+        "gulp-filter": "2.0.2",
+        "handlebars": "3.0.0",
+        "hbsfy": "2.2.1",
+        "vinyl-buffer": "1.0.0",
+        "vinyl-source-stream": "1.0.0",
         "express": "4.11.2",
-        "body-parser": "~1.12.0",
-        "jade": "~1.9.2",
-        "resolve": "^1.1.6",
-
-        "jspot": "^0.3.7",
-        "gulp-po2json": "^0.4.0"
+        "body-parser": "1.12.0",
+        "jade": "1.9.2",
+        "resolve": "1.1.6",
+        "jspot": "0.3.7",
+        "gulp-po2json": "0.4.0"
     }
 }
